--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -197,5 +197,6 @@
     "documentProofOfAddress6": " Factura del Impuesto sobre la Propiedad",
     "documentProofOfAddress7": "W2 u otro documento de declaración de impuestos", 
     "naturalAccountTittle": "Información personal",
-    "historicTransactionsTitle": "Histórico de transacciones"
+    "historicTransactionsTitle": "Histórico de transacciones", 
+    "loadMore": "Carga más"
 }
