--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,207 +1,206 @@
 {
-    "warningAllFieldRequired": "All fields are required",
-    "languageSelector": "Change language",
-    "login": "Login",
-    "backButtonTitle": "Back",
-    "noAccount": "Have you not sign in yet?",
-    "emailLabel": "Email",
-    "emailPlaceholder": "you-emailcorporate.com",
-    "passwordLabel": "Password",
-    "changePassword": "Change Password",
-    "rememberPassword": "Remember password",
-    "recoveryPassword": "Recovery password",
-    "documents": "Documents",
-    "home": "Home",
-    "deposit": "Deposit",
-    "selectCurrency": "Choose the type of",
-    "currency": "currency",
-    "transfer": "Transfer",
-    "wallet": "Wallet",
-    "nameWallet": "Wallet name",
-    "warningSendAsset": "Send only {asset} to this wallet address. Any other type of asset shipped may be lost and unrecoverable",
-    "createWallet": "Create wallet",
-    "walletAddress": "Wallet address",
-    "fiatWallet":"Fiat Wallet",
-    "fiat": "Fiat",
-    "crypto": "Crypto",
-    "cryptoWallet": "Crypto wallet",
-    "selectCrypto": "Select crypto",
-    "search": "Search",
-    "searchWallet": "Search crypto wallet",
-    "newWallet": "Add new wallet address",
-    "swap": "Swap",
-    "save": "Save",
-    "cancel": "Cancel",
-    "countryLabel": "Country",
-    "countryPlaceholder": "Select country",
-    "nameLabel": "First name",
-    "namePlaceholder": "First name",
-    "secondNameLabel": "Middle name",
-    "secondNamePlaceholder": "Middle name",
-    "surnameLabel": "Last name",
-    "surnamePlaceholder": "Last name",
-    "secondSurnameLabel": "Second surname",
-    "secondSurnamePlaceholder": "Second surname",
-    "documentLabel": "Identification document",
-    "documentPlaceholder": "Identification document",
-    "countryDocumentLabel": "Country of issuance of the document",
-    "birthdateLabel": "Date of Birth",
-    "birthdatePlaceholder": "dd / mm / yyyy",
-    "divisorLabel": "Address",
-    "phoneLabel": "Telephone",
-    "phonePlaceholder": "Telephone",
-    "acceptSMSLabel": "Accept SMS?",
-    "stateLabel": "State",
-    "cityLabel": "City",
-    "addressLabel1": "Address 1",
-    "addressPlaceholder1": "Address 1",
-    "addressLabel2": "Address 2",
-    "addressPlaceholder2": "Address 2",
-    "postalCodeLabel": "Postal code",
-    "businessTitle": "COMPANY - DOCUMENT UPLOAD",
-    "businessDocumentLabel": "Documents of Incorporation of the company",
-    "businessAddressLabel": "Proof of address",
-    "filePlaceholder": "Select File",
-    "fileDescription": "Upload the document file here (supported format JPG, PNG or PDF)",
-    "messageImageSize": "El archivo supera los 4Mb.",
-    "shareholders": "Shareholders",
-    "shareholderTitle": "SHAREHOLDERS - UPLOAD OF DOCUMENTS",
-    "shareholderFileFrontLabel": "Front side",
-    "shareholderFileBackLabel": "Back side",
-    "shareholderAddressLabel": "Proof of fiscal domicile",
-    "balance": "My balance",
-    "profile": "Profile",
-    "setting": "Settings",
-    "logOut": "Logout",
-    "help": "Help",
-    "companyData": "Company data",
-    "edit": "Edit",
-    "businessNameLabel": "Company name",
-    "businessNamePlaceholder": "Business legal name",
-    "informationContact": "Contact information",
-    "backButtonText": "Back",
-    "nextButtonText": "Next",
-    "titleInformationCompany": "Legal Information",
-    "informationRegisterPartner": "*Only for shareholders with more than 25% of the shares.",
-    "titleViewRegisterPartner": "Shareholders",
-    "roleLabel": "Position within the company",
-    "rolePlaceholder": "Position within the company",
-    "partnerTitle": "Shareholder data",
-    "contact": "Contact",
-    "loginTitle": "Registered users",
-    "loginSubtitle": "Welcome Please enter your details!",
-    "write": "Write",
-    "labelCurrentPassword": "Type your current password",
-    "labelNewPassword": "New password",
-    "labelConfirmNewPassword": "Confirm new password",
-    "withdraw": "Withdraw",
-    "withdrawFiat": "Withdraw Fiat",
-    "withdrawCrypto": "Withdraw Crypto",
-    "done": "Done",
-    "internationalWire": "International Wire",
-    "domesticWire":"Domestic Wire",
-    "betweenNOBACrypto":"Between NOBA Crypto Wallets",
-    "otherPlatformCrypto":"To other Platforms Crypto Wallets",
-    "betweenNOBA": "Transfer Between NOBA Accounts",
-    "withdrawFiatSelectMsg":"Select national wire (within the USA) or International (international banks)",
-    "withdrawCryptoSelectMsg":"Select Crypto Transfer Internal (within Noba) or External (Outside Noba)",
-    "depositAccountUSD":"Deposits in this account must be made in US Dollars",
-    "depositAccountOther": "Deposits into this account can be made in currencies other than US dollars.",
-    "depositNameOnBank":"Name on Bank Account",
-    "bankName": "Bank Name",
-    "helpTextDepositBankName": "Make sure it exactly as it appears on your bank account",
-    "routingNumber": "Routing Number",
-    "creditTo": "Credit To",
-    "address": "Address",
-    "accountNumber":"Account Number",
-    "bankAddress": "Bank Address",
-    "bankPhone": "Bank Phone",
-    "swiftCode": "Swift Code",
-    "statePlaceHolder": "Select state",
-    "cityPlaceHolder": "Select City",
-    "youBeneficiaries": "Your Beneficiaries",
-    "nobaBeneficiaryEmail": "Noba beneficiary email",
-    "fullName": "Full Name",
-    "somethingWentWrong": "Something went wrong",
-    "updatePasswordSuccessMessage": "Password successfully updated",
-    "successfulOperation": "Successful operation",
-    "shareholderDataSuccessSend": "Shareholder data sent correctly",
-    "continue": "Continue",
-    "addBeneficiaries": "Add Beneficiaries",
-    "streetAddress": "Street Address",
-    "streetAddressTwo": "Street Address (Apt, Suite, Etc.)",
-    "intermediaryBankName": "Intermediary Bank Name",
-    "intermediaryRoutingNumber": "Intermediary Routing Number",
-    "intermediarySwiftCode": "Intermediary Swift Code",
-    "saveNewPayee": "Save new beneficiary",
-    "newBeneficiary": "New Beneficiary",
-    "beneficiaryAddress": "Beneficiary Address",
-    "docTypeLabelDriversLicense": "Driver License",
-    "docTypeLabelGovernmentId": "GovernmentId",
-    "docTypeLabelPassport": "Passport",
-    "docTypeLabelResidencePermit": "Residence Permit",
-    "youSendTo" : "You send to ",
-    "fee": "Fee",
-    "currentBalance": "Current balance",
-    "confirmWithdraw": "Confirm transaction withdraw",
-    "account": "Account",
-    "forgotPasswordTitle": "Password recovery",
-    "forgotPasswordSubtitle": "Enter your email address and you will receive a link to create a new password.",
-    "forgotPasswordButton": "Send",
-    "alreadyAccount": "Do you already have an account?",
-    "documentsPersonTitle": "Verify Documents",
-    "documentsPersonText": "We are going to start with the document upload process for verification",
-    "addNewShareHolder": "Add New Shareholder",
-    "personalData": "Personal data",
-    "dni": "Identity document",
-    "contactInfo": "Contact information",
-    "documentsCompanyCardTitle": "COMPANY - OWNERSHIP STRUCTURE",
-    "documentTypePlaceHolder": "Choose document type",
-    "utilityBillLabel": "Proof of fiscal domicile",
-    "uploadFileText": "Upload the document file here (Supported format JPG, PNG or PDF)",
-    "uploadFileDocumentCompanyText": "COMPANY - DOCUMENT UPLOAD",
-    "uploadFileDocumentShareHolderText": "SHAREHOLDERS - DOCUMENT UPLOAD",
-    "selectFile": "Select File",
-    "viewSwapHistory": "View Swap History",
-    "iHave": "I Have",
-    "intermediaryBankAddress": "Intermediary bank address",
-    "swapSuccessfulTitle": "Swap Successful",
-    "swapSuccessfulText": "The transaction has been processed successfully. The transfer may still be in process; check the transaction log later.",
-    "swapFrom": "from",
-    "swapTo": "to",
-    "swapPriceQuote": "Quote / Price",
-    "swapBackButtonTitle": "Back to swap", 
-    "swapExchangeServiceText": "Exchange services are available through third-party API providers",
-    "wallets": "Wallets",
-    "amount": "Amount",
-    "confirmation": "Confirmation",
-    "beneficiary": "Beneficiary",
-    "description": "Description",
-    "addNewBeneficiary": "Add new beneficiary wallet",
-    "searchBeneficiaryLabel": "Search Beneficiary",
-    "label": "Label",
-    "pleaseVerifyField": "Please verify the form fields",
-    "reference": "Reference",
-    "rememberMe": "Remember me",
-    "swapHistory": "Swap History",
-    "iWant": "I want",
-    "insufficientFunds": "Insufficient funds",
-    "moveDone": "Move done",
-    "toYourBalanceIn": "To your balance in",
-    "operationDate": "Operation date",
-    "status": "Status",
-    "quotePrice": "Quote / Price",
-    "numberOfOrder": "Number of order",
-    "backToDocuments": "Back to documents",
-    "updateDocuments": "Update documents",
-    "titleAccountValidationProcess": "Validation pending",
-    "accountValidationProcess": "Once your account is approved, we will send you an email with the validation of your account.",
-    "documentProofOfAddress1": "Monthly utility bills (e.g., electricity, phone)",
-    "documentProofOfAddress2": "Statements (e.g., bank, credit card)",
-    "documentProofOfAddress3": "Rental Lease Agreement",
-    "documentProofOfAddress4": "Vehicle Registration",
-    "documentProofOfAddress5": "Copy of Real Estate Property Title",
-    "documentProofOfAddress6": "Property Tax Bill",
-    "documentProofOfAddress7": "W2 or other tax return document", 
-    "naturalAccountTittle": "Personal Data"
+  "warningAllFieldRequired": "All fields are required",
+  "languageSelector": "Change language",
+  "login": "Login",
+  "backButtonTitle": "Back",
+  "noAccount": "Have you yet to sign in?",
+  "emailLabel": "Email",
+  "emailPlaceholder": "you-email@corporate.com",
+  "passwordLabel": "Password",
+  "changePassword": "Change Password",
+  "rememberPassword": "Remember password",
+  "recoveryPassword": "Recovery password",
+  "documents": "Documents",
+  "home": "Home",
+  "deposit": "Deposit",
+  "selectCurrency": "Choose the type of",
+  "currency": "currency",
+  "transfer": "Transfer",
+  "wallet": "Wallet",
+  "nameWallet": "Wallet name",
+  "warningSendAsset": "Send only {asset} to this wallet address. Any other type of asset transferred may be lost and unrecoverable.",
+  "createWallet": "Create wallet",
+  "walletAddress": "Wallet address",
+  "fiatWallet": "Fiat Wallet",
+  "fiat": "Fiat",
+  "crypto": "Crypto",
+  "cryptoWallet": "Crypto wallet",
+  "selectCrypto": "Select crypto",
+  "search": "Search",
+  "searchWallet": "Search crypto wallet",
+  "newWallet": "Add new wallet address",
+  "swap": "Swap",
+  "save": "Save",
+  "cancel": "Cancel",
+  "countryLabel": "Country",
+  "countryPlaceholder": "Select country",
+  "nameLabel": "First name",
+  "namePlaceholder": "First name",
+  "secondNameLabel": "Middle name",
+  "secondNamePlaceholder": "Middle name",
+  "surnameLabel": "Last name",
+  "surnamePlaceholder": "Last name",
+  "secondSurnameLabel": "Second surname",
+  "secondSurnamePlaceholder": "Second surname",
+  "documentLabel": "Identification document",
+  "documentPlaceholder": "Identification document",
+  "countryDocumentLabel": "The country that issues the ID document",
+  "birthdateLabel": "Date of Birth",
+  "birthdatePlaceholder": "dd / mm / yyyy",
+  "divisorLabel": "Address",
+  "phoneLabel": "Telephone",
+  "phonePlaceholder": "Telephone",
+  "acceptSMSLabel": "Accept SMS?",
+  "stateLabel": "State",
+  "cityLabel": "City",
+  "addressLabel1": "Address 1",
+  "addressPlaceholder1": "Address 1",
+  "addressLabel2": "Address 2",
+  "addressPlaceholder2": "Address 2",
+  "postalCodeLabel": "Postal code",
+  "businessTitle": "COMPANY - DOCUMENT UPLOAD",
+  "businessDocumentLabel": "Documents of Incorporation of the company",
+  "businessAddressLabel": "Proof of address",
+  "filePlaceholder": "Select File",
+  "fileDescription": "Upload the document file here (supported format JPG, PNG or PDF)",
+  "messageImageSize": "The file surpasses 4MB",
+  "shareholders": "Shareholders",
+  "shareholderTitle": "SHAREHOLDERS - UPLOAD OF DOCUMENTS",
+  "shareholderFileFrontLabel": "Front side",
+  "shareholderFileBackLabel": "Back side",
+  "shareholderAddressLabel": "Proof of fiscal domicile",
+  "balance": "My balance",
+  "profile": "Profile",
+  "setting": "Settings",
+  "logOut": "Logout",
+  "help": "Help",
+  "companyData": "Company data",
+  "edit": "Edit",
+  "businessNameLabel": "Company name",
+  "businessNamePlaceholder": "Business legal name",
+  "informationContact": "Contact information",
+  "backButtonText": "Back",
+  "nextButtonText": "Next",
+  "titleInformationCompany": "Legal Information",
+  "informationRegisterPartner": "*Only for shareholders with more than 25% of the shares.",
+  "titleViewRegisterPartner": "Shareholders",
+  "roleLabel": "Position within the company",
+  "rolePlaceholder": "Position within the company",
+  "partnerTitle": "Shareholder data",
+  "contact": "Contact",
+  "loginTitle": "Registered users",
+  "loginSubtitle": "Welcome Please enter your details!",
+  "write": "Write",
+  "labelCurrentPassword": "Type your current password",
+  "labelNewPassword": "New password",
+  "labelConfirmNewPassword": "Confirm new password",
+  "withdraw": "Withdraw",
+  "withdrawFiat": "Withdraw Fiat",
+  "withdrawCrypto": "Withdraw Crypto",
+  "done": "Done",
+  "internationalWire": "International Wire",
+  "domesticWire": "Domestic Wire",
+  "betweenNOBACrypto": "Between NOBA Crypto Wallets",
+  "otherPlatformCrypto": "To other Platforms Crypto Wallets",
+  "betweenNOBA": "Transfer Between NOBA Accounts",
+  "withdrawFiatSelectMsg": "Select domestic wire (within the USA) or international (international banks)",
+  "withdrawCryptoSelectMsg": "Select Crypto Transfer Internal (within Noba) or External (Outside Noba)",
+  "depositAccountUSD": "Deposits in this account must be made in US Dollars",
+  "depositAccountOther": "Deposits into this account can be made in currencies other than US dollars.",
+  "depositNameOnBank": "Name on Bank Account",
+  "bankName": "",
+  "helpTextDepositBankName": "Make sure the bank name is exactly as it appears on your bank account",
+  "routingNumber": "Routing Number",
+  "creditTo": "Credit To",
+  "address": "Address",
+  "accountNumber": "Account Number",
+  "bankAddress": "Bank Address",
+  "bankPhone": "Bank Phone",
+  "swiftCode": "Swift Code",
+  "statePlaceHolder": "Select state",
+  "cityPlaceHolder": "Select City",
+  "youBeneficiaries": "Your Beneficiaries",
+  "nobaBeneficiaryEmail": "Noba beneficiary email",
+  "fullName": "Full Name",
+  "somethingWentWrong": "Something went wrong",
+  "updatePasswordSuccessMessage": "Password successfully updated",
+  "successfulOperation": "Successful operation",
+  "shareholderDataSuccessSend": "Shareholder data sent correctly",
+  "continue": "Continue",
+  "addBeneficiaries": "Add Beneficiaries",
+  "streetAddress": "Street Address",
+  "streetAddressTwo": "Street Address (Apt, Suite, Etc.)",
+  "intermediaryBankName": "Intermediary Bank Name",
+  "intermediaryRoutingNumber": "Intermediary Routing Number",
+  "intermediarySwiftCode": "Intermediary Swift Code",
+  "saveNewPayee": "Save new beneficiary",
+  "newBeneficiary": "New Beneficiary",
+  "beneficiaryAddress": "Beneficiary Address",
+  "docTypeLabelDriversLicense": "Driver License",
+  "docTypeLabelGovernmentId": "GovernmentId",
+  "docTypeLabelPassport": "Passport",
+  "docTypeLabelResidencePermit": "Residence Permit",
+  "youSendTo": "You send to ",
+  "fee": "Fee",
+  "currentBalance": "Current balance",
+  "confirmWithdraw": "Confirm transaction withdraw",
+  "account": "Account",
+  "forgotPasswordTitle": "Password recovery",
+  "forgotPasswordSubtitle": "Enter your email address and you will receive a link to create a new password.",
+  "forgotPasswordButton": "Send",
+  "alreadyAccount": "Do you already have an account?",
+  "documentsPersonTitle": "Verify Documents",
+  "documentsPersonText": "We are going to start with the document upload process for verification",
+  "addNewShareHolder": "Add New Shareholder",
+  "personalData": "Personal data",
+  "dni": "Identity document",
+  "contactInfo": "Contact information",
+  "documentsCompanyCardTitle": "COMPANY - OWNERSHIP STRUCTURE",
+  "documentTypePlaceHolder": "Choose document type",
+  "utilityBillLabel": "Proof of fiscal domicile",
+  "uploadFileText": "Upload the document file here (Supported format JPG, PNG or PDF)",
+  "uploadFileDocumentCompanyText": "COMPANY - DOCUMENT UPLOAD",
+  "uploadFileDocumentShareHolderText": "SHAREHOLDERS - DOCUMENT UPLOAD",
+  "selectFile": "Select File",
+  "viewSwapHistory": "View Swap History",
+  "iHave": "I Have",
+  "intermediaryBankAddress": "Intermediary bank address",
+  "swapSuccessfulTitle": "Swap Successful",
+  "swapSuccessfulText": "The transaction has been processed successfully. The transfer may still be in process; check the transaction log later.",
+  "swapFrom": "from",
+  "swapTo": "to",
+  "swapPriceQuote": "Quote / Price",
+  "swapBackButtonTitle": "Back to swap",
+  "swapExchangeServiceText": "Exchange services are available through third-party API providers",
+  "wallets": "Wallets",
+  "amount": "Amount",
+  "confirmation": "Confirmation",
+  "beneficiary": "Beneficiary",
+  "description": "Description",
+  "addNewBeneficiary": "Add new beneficiary wallet",
+  "searchBeneficiaryLabel": "Search Beneficiary",
+  "label": "Label",
+  "pleaseVerifyField": "Please verify the form fields",
+  "reference": "Reference",
+  "rememberMe": "Remember me",
+  "swapHistory": "Swap History",
+  "iWant": "I want",
+  "insufficientFunds": "Insufficient funds",
+  "moveDone": "Move done",
+  "toYourBalanceIn": "To your balance in",
+  "operationDate": "Operation date",
+  "status": "Status",
+  "quotePrice": "Quote / Price",
+  "numberOfOrder": "Number of order",
+  "backToDocuments": "Back to documents",
+  "updateDocuments": "Update documents",
+  "titleAccountValidationProcess": "Validation pending",
+  "accountValidationProcess": "Once your account is approved, we will send you an email with the validation of your account.",
+  "documentProofOfAddress1": "Monthly utility bills (e.g., electricity, phone)",
+  "documentProofOfAddress2": "Statements (e.g., bank, credit card)",
+  "documentProofOfAddress3": "Rental Lease Agreement",
+  "documentProofOfAddress4": "Vehicle Registration",
+  "documentProofOfAddress5": "Copy of Real Estate Property Title",
+  "documentProofOfAddress6": "Property Tax Bill",
+  "documentProofOfAddress7": "W2 or other tax return document"
 }
