--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -210,5 +210,5 @@
   "depositBankName": "Depository Bank Name", 
   "titleDespositFiat": "Deposit Instructions",
   "downloadPdf": "Download PDF File",
-  "footerPdfFiatData": "© NobaTM 2023 - All rights reserved."
+  "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved."
 }
