--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -200,5 +200,5 @@
   "textCopySuccessful": "Copiado al portapapeles con éxito",
   "titleDespositFiat": "Instrucciones de depósito",
   "downloadPdf": "Descargar archivo PDF",
-  "footerPdfFiatData": "© NobaTM 2023 - Todos los derechos reservados."
+  "footerPdfFiatData": "Noba.cash TM 2023 - Todos los derechos reservados."
 }
