--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -212,5 +212,6 @@
   "downloadPdf": "Download PDF File",
   "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved.",
   "namePdfDepositFiatDomestic": "Domestic Deposit Instructions",
-  "namePdfDepositFiatInternational": "International Deposit Instructions"
+  "namePdfDepositFiatInternational": "International Deposit Instructions",
+  "textNewWalletAddress": "In Noba you can only have one wallet per associated asset."
 }
