--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
   "languageSelector": "Change language",
   "login": "Login",
   "backButtonTitle": "Back",
-  "noAccount": "Have you yet to sign in?",
+  "noAccount": "Not Yet Registered?",
   "emailLabel": "Email",
   "emailPlaceholder": "you-emailcorporate.com",
   "passwordLabel": "Password",
