--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -204,6 +204,8 @@
   "namePdfDepositFiatDomestic": "Instrucciones de depósito doméstico",
   "namePdfDepositFiatInternational": "Instrucciones de depósito internacional",
   "depositBankName": "Nombre del banco a depositar",
-  "textNewWalletAddress": "En Noba solo se puede tener una billetera por activo asociado."
+  "textNewWalletAddress": "En Noba solo se puede tener una billetera por activo asociado.",
+  "from": "Desde",
+  "to": "Para"
 
 }
