--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,6 +74,8 @@
   "setting": "Settings",
   "logOut": "Logout",
   "help": "Help",
+  "from": "From",
+  "top": "To",
   "companyData": "Company data",
   "edit": "Edit",
   "businessNameLabel": "Company name",
