--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -213,7 +213,5 @@
   "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved.",
   "namePdfDepositFiatDomestic": "Domestic Deposit Instructions",
   "namePdfDepositFiatInternational": "International Deposit Instructions",
-  "textNewWalletAddress": "In Noba you can only have one wallet per associated asset.",
-  "from": "From",
-  "to": "To"
+  "textNewWalletAddress": "In Noba you can only have one wallet per associated asset."
 }
