wip: mostrar fee

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,6 +74,8 @@
   "setting": "Settings",
   "logOut": "Logout",
   "help": "Help",
+  "from": "From",
+  "top": "To",
   "companyData": "Company data",
   "edit": "Edit",
   "businessNameLabel": "Company name",
@@ -172,6 +174,8 @@
   "swapPriceQuote": "Quote / Price",
   "swapBackButtonTitle": "Back to swap",
   "swapExchangeServiceText": "Exchange services are available through third-party API providers",
+  "swapSpend": "Total to spend",
+  "swapReceive": "Total to receive",
   "wallets": "Wallets",
   "amount": "Amount",
   "confirmation": "Confirmation",
