--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -168,7 +168,11 @@
   "swapSuccessfulTitle": "Intercambio exitoso",
   "swapSuccessfulText": "La transacción se ha procesado con éxito. La transferencia puede estar todavía en proceso; compruebe el registro de transacciones más tarde.",
   "swapFrom": "de",
+  "from": "De",
+  "top": "Para",
   "swapTo": "a",
+  "swapSpend": "Total a gastar",
+  "swapReceive": "Total que va a recibir",
   "swapPriceQuote": "Presupuesto / Precio",
   "swapBackButtonTitle": "Volver al intercambio",
   "swapExchangeServiceText": "Los servicios de intercambio están disponibles a través de proveedores de API de terceros",
