--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -216,9 +216,9 @@
   "textNewWalletAddress": "In Noba you can only have one wallet per associated asset.",
   "warningProofOfAddress": "If you are an American citizen, and the uploaded document has the address you registered for the signing process, please press continue to finish.",
   "proofOfAddress1": "If the address in your ID does not match the address you registered for the signing process, please upload proof of address USA territories.",
-  "proofOfAddress2": "If you are a foreign citizen and used your Passport for the signing process, please upload proof of address in USA territories.", 
-  "labelSelectProofOfAddress": "Select the type of document you are sending", 
+  "proofOfAddress2": "If you are a foreign citizen and used your Passport for the signing process, please upload proof of address in USA territories.",
+  "labelSelectProofOfAddress": "Select the type of document you are sending",
   "dropdownSelectProofOfAddress": "Select the type of document",
-  "userDataSuccessSend": "Personal data sent correctly"
-
+  "userDataSuccessSend": "Personal data sent correctly",
+  "companyIncorporationFile": "Documents of Incorporation of the company"
 }
