--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -205,13 +205,14 @@
   "documentProofOfAddress7": "W2 or other tax return document",
   "naturalAccountTittle": "Personal Data",
   "historicTransactionsTitle": "Transaction History",
-  "loadMore": "Load more", 
+  "loadMore": "Load more",
   "textCopySuccessful": "Copied to clipboard successfully",
-  "depositBankName": "Depository Bank Name", 
+  "depositBankName": "Depository Bank Name",
   "titleDespositFiat": "Deposit Instructions",
   "downloadPdf": "Download PDF File",
   "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved.",
   "namePdfDepositFiatDomestic": "Domestic Deposit Instructions",
   "namePdfDepositFiatInternational": "International Deposit Instructions",
-  "textNewWalletAddress": "In Noba you can only have one wallet per associated asset."
+  "textNewWalletAddress": "In Noba you can only have one wallet per associated asset.",
+  "transactionHistory": "Transaction history"
 }
