--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -213,8 +213,7 @@
   "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved.",
   "namePdfDepositFiatDomestic": "Domestic Deposit Instructions",
   "namePdfDepositFiatInternational": "International Deposit Instructions",
-  "textNewWalletAddress": "In Noba you can only have one wallet per associated asset.",
-  "selectAnAsset": "Select an asset"
+  "selectAnAsset": "Select an asset",
   "textNewWalletAddress": "In Noba you can only have one wallet per associated asset.",
   "warningProofOfAddress": "If you are an American citizen, and the uploaded document has the address you registered for the signing process, please press continue to finish.",
   "proofOfAddress1": "If the address in your ID does not match the address you registered for the signing process, please upload proof of address USA territories.",
