[WIP] Preparing pdf table export

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -210,8 +210,9 @@
   "depositBankName": "Depository Bank Name",
   "titleDespositFiat": "Deposit Instructions",
   "downloadPdf": "Download PDF File",
-  "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved.",
+  "footerPdfNobaData": "Noba.cash TM 2023 - All rights reserved.",
   "namePdfDepositFiatDomestic": "Domestic Deposit Instructions",
+  "namePdfTransactionHistory": "Transactions History",
   "namePdfDepositFiatInternational": "International Deposit Instructions",
   "textNewWalletAddress": "In Noba you can only have one wallet per associated asset.",
   "transactionHistory": "Transaction history",
