--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -200,8 +200,9 @@
   "textCopySuccessful": "Copiado al portapapeles con éxito",
   "titleDespositFiat": "Instrucciones de depósito",
   "downloadPdf": "Descargar archivo PDF",
-  "footerPdfFiatData": "Noba.cash TM 2023 - Todos los derechos reservados.",
+  "footerPdfNobaData": "Noba.cash TM 2023 - Todos los derechos reservados.",
   "namePdfDepositFiatDomestic": "Instrucciones de depósito doméstico",
+  "namePdfTransactionHistory": "Historico de transacciones",
   "namePdfDepositFiatInternational": "Instrucciones de depósito internacional",
   "depositBankName": "Nombre del banco a depositar",
   "textNewWalletAddress": "En Noba solo se puede tener una billetera por activo asociado.",
