--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -215,5 +215,8 @@
   "allTransactions": "Todas las transacciones",
   "selectAnAsset": "Selecciona un asset",
   "invalidDatePeriod": "Por favor selecciona un fecha de inicio que anteceda la fecha final",
-  "downloadExtract": "Descargar extracto"
+  "downloadExtract": "Descargar extracto",
+  "depositTransactionName": "Deposito",
+  "withdrawTransactionName": "Retiro",
+  "revertTransactionName": "Reversos"
 }
