--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -234,5 +234,6 @@
   "ourFee": "Nuestra comisión",
   "hasReceived": "Ha recibido",
   "transactionNumber": "Número de transacción",
-  "newTransfer": "Nueva transacción"
+  "newTransfer": "Nueva transacción",
+  "youSend": "Enviaste"
 }
