[WIP] Generating pdf for noba and other crypto transactions.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -244,5 +244,6 @@
   "hasReceived": "Has received",
   "transactionNumber": "Transaction number",
   "newTransfer": "New transfer",
-  "youSend": "You send"
+  "youSend": "You send",
+  "transactionReceipt": "Transaction receipt"
 }
